--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "contributors": [],
   "dependencies": {
     "browser-sync": "^2.16.0",
-    "gulp": "^3.9.1"
+    "gulp": "^3.9.1",
+    "jsdoc": "^3.4.3"
   },
   "main": "index.js",
   "directories": {
@@ -22,5 +23,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "jsdoc": "^3.4.3"
+  }
 }
