--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   "description": "",
   "devDependencies": {
     "chai": "^4.0.2",
+    "gulp-concat": "^2.6.1",
+    "gulp-uglify": "^3.0.0",
     "jsdoc": "^3.4.3",
     "mocha": "^3.4.2",
     "sinon": "^2.3.6"
